# Automated-Youtube-playlist-downloader

./: .gitignore  README.md  main.py  pyproject.toml
app/: downloader.py  main.py  pdf_generator.py
