[project]
name = "playlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "yt-dlp>=2026.2.4",
]
[project.scripts]
yt-downloader = "app.main:main"

[tool.uv]
package = true
